Make more readable and fix style

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-body {
+* {
   margin: 0;
   --font-color: #00acdc;
 }
